# pymcprotocol

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _config.yml  netlify.toml  pyproject.toml
docs/: conf.py  index.rst  pymcprotocol.rst
src/pymcprotocol/: __init__.py  mcprotocolconst.py  mcprotocolerror.py  type3e.py  type4e.py
tests/: config.ini  test_pymcprotocol.py
