[tool.poetry]
name = "pymcprotocol"
version = "0.2.8"
description = "MC Protocol(MELSEC Communication Protocol) implementation by Python"
license = "MIT"
authors = ["Yohei Osawa <yohei.osawa.318.niko8@gmail.com>"]
readme = "./README.md"
homepage = "https://pymcprotocol.netlify.app/" 
repository = "https://github.com/senrust/pymcprotocol"
keywords = ["Mistubishi", "PLC", "factory"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
